--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "preinstall": "node -e \"try{require('./skip-install.js')}catch(e){}\"",
     "start": "node command.js",
-    "test": "exit 0"
+    "test": "istanbul cover _mocha -- -R spec"
   },
   "dependencies": {
     "coffee-script": "^1.10.0",
     "debug": "^2.2.0",
     "lodash": "^3.10.1",
     "meshblu": "^1.30.1",
-    "meshblu-config": "^3.1.1"
+    "meshblu-config": "^3.1.1",
+    "request": "^2.63.0"
   },
   "bundledDependencies": [
     "request",
@@ -32,5 +33,15 @@
   "keywords": [
     "meshblu-connector",
     "gateblu"
-  ]
+  ],
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "coffee-coverage": "^0.6.3",
+    "coffee-script": "^1.10.0",
+    "istanbul": "^0.3.21",
+    "mocha": "^2.3.3",
+    "mocha-istanbul": "^0.2.0",
+    "sinon": "^1.17.0",
+    "sinon-chai": "^2.8.0"
+  }
 }
